# ASI-SHROOM

./: README.md
.devcontainer/: devcontainer.json
mushroomclassifier/: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
mushroomclassifier/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
mushroomclassifier/catboost_info/learn/: events.out.tfevents
mushroomclassifier/conf/base/: catalog.yml
mushroomclassifier/data/06_models/: best_model.pkl
mushroomclassifier/notebooks/: automl_pycaret.ipynb
mushroomclassifier/src/mushroomclassifier/: __init__.py  __main__.py  pipeline_registry.py  settings.py
mushroomclassifier/src/mushroomclassifier/pipelines/process_data/: nodes.py  pipeline.py
mushroomclassifier/src/mushroomclassifier/pipelines/train_model/: __init__.py  nodes.py  pipeline.py
